cloud/istio/ssh-multiplex/single-port/multiplexing/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ssh-multiplex
  labels:
    app: ssh-multiplex
  annotations:
    sidecar.istio.io/inject: "false" # TODO
spec:
  containers:
  - name: openssh-server
    image: lscr.io/linuxserver/openssh-server:9.3_p2-r0-ls136
    ports:
    - containerPort: 2222
---
apiVersion: v1
kind: Service
metadata:
  name: ssh-multiplex
  labels:
    app: ssh-multiplex
spec:
  ports:
  - port: 2222
    name: ssh
  clusterIP: None  # A headless service
  selector:
    app: ssh-multiplex
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ssh-multiplex
spec:
  hosts:
  - "*"
  gateways:
  - default/ssh-multiplex-gateway
  tcp:
  - route:
    - destination:
        host: ssh-multiplex.default.svc.cluster.local
        port:
          number: 2222
